# python_django

./: Dockerfile  docker-compose.yaml  pyproject.toml
mysite/: db.sqlite3  log.txt  quieries.sql  shopapp-fixtures.json  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/management/commands/: create_blog_basics.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html  base.html
mysite/database/: db.sqlite3
mysite/locale/en/LC_MESSAGES/: django.mo  django.po
mysite/locale/ru/LC_MESSAGES/: django.mo  django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: forms.py  models.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: middlewares.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  api.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: products-fixtures.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_product_created_by.py  0008_order_receipt.py  0009_product_preview.py  0010_productimage.py  0011_alter_order_options_alter_product_options_and_more.py  0012_alter_product_options.py
(+35 files in other folders)
